# teamspeak-summarizer

./: .gitignore  README.md  pyproject.toml
src/teamspeak_meeting_notes/: __init__.py  audio_probe.py  bundler.py  cli.py  filename_parser.py  models.py  pipeline.py  summarize.py  timeline.py  transcribe.py
tests/: test_bundler.py  test_filename_parser.py  test_timeline.py
